Creation of the base for reading a folder an accessing a file content directly into the application

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -41,6 +41,7 @@
   ],
   "typeRoots": [
     "./node_modules/@types",
+    "./node_modules/drivelist/js",
     "./node_modules/vuetify/types"
   ]
 }
