--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
   "main": "background.js",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.12.1",
+    "@types/mime-types": "^2.1.0",
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "drivelist": "^8.0.10",
+    "mime-types": "^2.1.26",
     "moment": "^2.24.0",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.2",
@@ -26,6 +29,7 @@
     "vuex-module-decorators": "^0.16.1"
   },
   "devDependencies": {
+    "@types/node": "^13.11.1",
     "@typescript-eslint/eslint-plugin": "^2.18.0",
     "@typescript-eslint/parser": "^2.18.0",
     "@vue/cli-plugin-babel": "~4.2.0",
